[package]
name = "fallacy-arc"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
authors = ["David Li <davidli2010@foxmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A library for fallible Arc."
keywords = ["fallible", "Arc", "alloc"]
repository = "https://github.com/fallacy-rs/fallacy-arc.git"
homepage = "https://github.com/fallacy-rs/fallacy-arc"
documentation = "https://docs.rs/fallacy-arc/"

[dependencies]
fallacy-alloc = "0.1.0"
